--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,4 @@ jobs:
           command: |
             . venv/bin/activate
             ls
-            flake8 --exclude=venv* --statistics
+            flake8 --statistics
